# ai-chat-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
backend/: config.py  main.py
docs/: API_SPECIFICATION.md  DEPLOYMENT_ARCHITECTURE.md  DESIGN_SUMMARY.md  FRONTEND_ARCHITECTURE.md  IMPLEMENTATION_WORKFLOW.md  PHASE_0_TASKS.md  QUICK_START_COMMANDS.md  SYSTEM_DESIGN.md  ai-chatbot-prd.md
