[project]
name = "ai-chatbot"
version = "0.1.0"
description = "Educational AI chatbot with FastAPI and dual frontends"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",  # For async SQLite

    # OpenAI
    "openai>=1.0.0",

    # Utilities
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",  # For file uploads
    "aiofiles>=23.2.0",

    # Streamlit
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.6.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",  # For testing
    "factory-boy>=3.3.0",  # For test fixtures
]

prod = [
    "psycopg2-binary>=2.9.0",  # PostgreSQL
    "gunicorn>=21.2.0",
    "redis>=5.0.0",  # For caching
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "streamlit_app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90", "UP", "S"]
ignore = ["E501", "S105"]  # E501: Line length handled by formatter, S105: Hardcoded password ok for defaults

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
